--- a/kernal_log/HTML/nav bar 11.html
+++ b/kernal_log/HTML/nav bar 11.html
@@ -122,3 +122,127 @@
 </body>
 </html>
 
+
+<!DOCTYPE html>
+<html>
+<head>
+<link rel="stylesheet" href="nav.css">
+<title>side bar example</title>
+</head>
+<body>
+<div class="sidenav">
+
+38
+
+<a href="about.html" target="rightframe">About Us</a>
+<a href="dep.html" target="rightframe">Departments</a>
+<a href="vision.html" target="rightframe">VisioandMission</a>
+<a href="contact.html" target="rightframe">Contact Us</a>
+</div>
+<div class="main">
+<h1>side bar example</h1>
+<iframe name="rightframe">side bar example</iframe>
+
+</div>
+</body>
+</html>
+Nav.css
+a{
+display:block;
+text-decoration:none;
+padding:6px 8px 6px 16px;
+color:white;
+}
+a:hover{
+color:red;
+}
+.sidenav{
+height:100vh;
+width:160px;
+padding-top:20px;
+position:fixed;
+top:0;
+left:0;
+background-color:green;
+}
+.main{
+margin-left:160px;
+padding-top:0px;
+padding-bottom:0px;
+
+39
+
+padding-right:10px;
+padding-left:10px;
+height:2000px;
+}
+iframe{
+width:2000px;
+height:2000px;
+}
+About.html
+<html>
+<head>
+<title>about</title>
+</head>
+<body>
+<h1>About Us</h1>
+
+<p>Rajiv Gandhi Institute of Technology, named after the late Prime
+Minister Sri Rajiv Gandhi, run by the Government of Kerala, started
+functioning in 1991. It has established a vast infrastructure and put together
+a team of dedicated teachers. The institution has become one of the leading
+technical Institutes in Kerala.</p>
+
+</body>
+</html>
+Dep.html
+<html>
+<head>
+<title>Department</title>
+</head>
+<body>
+<h1>MASTER IN COMPUTER APPLICATION(MCA)</h1>
+<p>In RIT, Kottayam, the Master of Computer Applications (MCA) course
+was started in the year 2001. This post graduate course aims to mould
+professionals to meet the complex demands of the IT industry. Curriculum
+of the MCA course has been designed with emphasis on theoretical and
+practical applications of computer technology, for enabling the students to
+
+40
+
+be knowledgeable in various programming languages, computer hardware,
+database management, data mining, etc.</p>
+
+</body>
+</html>
+Vision.html
+<html>
+<head>
+<title></title>
+</head>
+<body>
+<h1>VISION AND MISSION</h1>
+<p>Be a center of technological excellence for the betterment of
+
+society</p>
+
+</body>
+</html>
+Contact.html
+<html>
+<head>
+<title></title>
+
+</head>
+<body>
+
+<h1>CONTACT US</h1>
+<p>Address forCommunication
+• Velloor PO
+• Pampady
+• Kottayam - 686501
+• Kerala State
+</p>
+</body>
+</html>
